<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="32dp"
    android:layout_marginLeft="32dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="32dp"
    android:layout_marginRight="32dp"
    android:layout_marginBottom="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Peticion" />

        <RadioButton
            android:id="@+id/get"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:checked="true"
            android:onClick="methodSelected"
            android:text="@string/GetMethod" />

        <RadioButton
            android:id="@+id/post"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="methodSelected"
            android:text="@string/PutMethod" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp">

        <TextView
            android:id="@+id/url-input-label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/UrlInputLabel" />

        <AutoCompleteTextView
            android:id="@+id/url_input"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textUri" />

    </LinearLayout>

    <TextView
        android:id="@+id/peticion-label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/PeticionView" />

    <EditText
        android:id="@+id/petition_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="4dp"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp" />

    <Button
        android:id="@+id/submit-button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="makeRequest"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/SubmitButton"
        android:textColor="?attr/colorButtonNormal"
        android:textColorLink="@color/colorAccent"
        tools:targetApi="m" />
</LinearLayout>